--- a/assets/styles/sections.css
+++ b/assets/styles/sections.css
@@ -1,5 +1,5 @@
 .backdrop-title {
-    height: 100vh;
+    height: 90vh;
 }
 .void-title {
     height: 90vh;
